--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
         <h2>Wrong :( </h2>
     </div>
 
+<!-- Will try building out JS with Jquery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="./assets/js/script.js"></script> 
 </body>
 </html>
