define initial pointers to our HTML

--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!-- Thinking of workflow, based on the example picture, when we load the page, we can:
+    Be greeted with some text and a button to start the quiz
+    We will also be able to select a button to view the high score
+    When we start the quiz, questions will come up and the timer will start counting down
+    Answering the questions will either give us score or lose score (incorrect answer)
+    After the quiz is done, it will display our score and allow us to record it
+
+
+-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
