Readme + fixed codebreaks

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport">
-        <meta http-equiv="X-UA-Compatible">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Camp Quiz</title>
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
@@ -47,13 +47,13 @@
 <!-- This div shows at the end of the quiz and allows for the submission of your score -->
         <div id="end-container" class="hide">
            <div class="container end">
-            <div id=score-banner>
+            <div id="score-banner">
                 <h1>All done!</h1>
             </div>  
             <form id="initials-form" class="initials">
               <p> Enter Initials:
                 <input type="text" name="initials" id="initials" class="text-input" />
-                <button class="btn startend" id="sumbit-score" type="submit">Submit</button> </p>
+                <button class="btn startend" id="submit-score" type="submit">Submit</button> </p>
               </form>
             </div>
         </div>
